--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p class="welcome"><span id="typed"></span></p>
   </header>
 
-
+<!-- ABOUT SECTION -->
   <section id="about">
     <h2>About Me</h2>
     <div class="about-container">
@@ -33,7 +33,8 @@
       </div>
     </div>
   </section>
-
+  
+<!-- EDUCATION SECTION -->
   <section id="education">
     <h2>Education</h2>
     <ul>
@@ -51,6 +52,7 @@
     </div>
   </section>
 
+<!-- SKILLS SECTION -->
   <section id="skills">
     <h2>Skills</h2>
     <div class="gallery">
@@ -62,7 +64,8 @@
       <figure><img src="assets/images/run 1.jpg" alt="Fun Run Event"><figcaption>UTP Convo Run 2024</figcaption></figure>
     </div>
   </section>
-
+  
+<!-- PROJECT SECTION -->
   <section id="projects">
     <h2>Work Experience / Projects</h2>
     <div class="gallery">
@@ -74,7 +77,7 @@
     </div>
   </section>
 
-
+<!-- CONTACT SECTION -->
   <section id="contact">
     <h2>Contact Me</h2>
     <p>If you would like to get in touch, you can reach me directly via email:</p>
@@ -92,3 +95,4 @@
   <script src="assets/js/script.js"></script>
 </body>
 </html>
+
