--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 
   <header>
     <div class="header-right">
-      <a href="Rynna Qarmila - CV.pdf" download class="btn--cv" title="Click to download my CV"> Download CV</a>
+      <a href="Rynna Qarmila - CV.pdf" download class="btn--cv" title="Click to download my CV">Download CV</a>
       <button id="themeToggle" class="theme-toggle" title="Switch Theme">🌙</button>
     </div>
     <p class="welcome"><span id="typed"></span></p>
   </header>
 
-<!-- ABOUT SECTION -->
+<!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
     <div class="about-container">
@@ -33,8 +33,8 @@
       </div>
     </div>
   </section>
-  
-<!-- EDUCATION SECTION -->
+
+<!-- Education Section -->
   <section id="education">
     <h2>Education</h2>
     <ul>
@@ -52,7 +52,7 @@
     </div>
   </section>
 
-<!-- SKILLS SECTION -->
+<!-- Skills Section -->
   <section id="skills">
     <h2>Skills</h2>
     <div class="gallery">
@@ -64,8 +64,8 @@
       <figure><img src="assets/images/run 1.jpg" alt="Fun Run Event"><figcaption>UTP Convo Run 2024</figcaption></figure>
     </div>
   </section>
-  
-<!-- PROJECT SECTION -->
+
+<!-- Projects Section -->
   <section id="projects">
     <h2>Work Experience / Projects</h2>
     <div class="gallery">
@@ -77,7 +77,7 @@
     </div>
   </section>
 
-<!-- CONTACT SECTION -->
+<!-- Contact Section -->
   <section id="contact">
     <h2>Contact Me</h2>
     <p>If you would like to get in touch, you can reach me directly via email:</p>
@@ -95,4 +95,3 @@
   <script src="assets/js/script.js"></script>
 </body>
 </html>
-
